--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         </activity>
         <activity android:name=".StudentActivity" >
         </activity>
+        <activity android:name=".AddUserActivity" >
+        </activity>
     </application>
 
 </manifest>
