--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".AddUserActivity" >
         </activity>
+        <activity android:name=".QueryActivity" >
+        </activity>
     </application>
 
 </manifest>
